// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/BasicRangePicker render diff size range date 1`] = `
<body>
  <div>
    <div
      class="css-1y8q0oh"
    >
      <div
        class="ant-picker ant-picker-range ant-picker-small css-dev-only-do-not-override-1xo6ltj basic-range-picker-wrapper custom-date-range css-w7y1zu"
      >
        <div
          class="ant-picker-input ant-picker-input-active"
        >
          <input
            autocomplete="off"
            placeholder="Start date"
            readonly=""
            size="12"
            value=""
          />
        </div>
        <div
          class="ant-picker-range-separator"
        >
          <span
            class="custom-icon custom-icon-arrow-right css-u3jcp4"
            role="img"
          >
            <svg
              fill="currentColor"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.68389 6.99993L4.79639 4.11243L5.62122 3.2876L9.33355 6.99993L5.62122 10.7123L4.79639 9.88743L7.68389 6.99993Z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-picker-input"
        >
          <input
            autocomplete="off"
            placeholder="End date"
            readonly=""
            size="12"
            value=""
          />
        </div>
        <div
          class="ant-picker-active-bar"
          style="left: 0px; width: 0px; position: absolute;"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/BasicRangePicker render diff size range date 2`] = `
<body>
  <div>
    <div
      class="css-1y8q0oh"
    >
      <div
        class="ant-picker ant-picker-range ant-picker-small css-dev-only-do-not-override-1xo6ltj basic-range-picker-wrapper custom-date-range css-w7y1zu"
      >
        <div
          class="ant-picker-input ant-picker-input-active"
        >
          <input
            autocomplete="off"
            placeholder="Start date"
            readonly=""
            size="12"
            value=""
          />
        </div>
        <div
          class="ant-picker-range-separator"
        >
          <span
            class="custom-icon custom-icon-arrow-right css-u3jcp4"
            role="img"
          >
            <svg
              fill="currentColor"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.68389 6.99993L4.79639 4.11243L5.62122 3.2876L9.33355 6.99993L5.62122 10.7123L4.79639 9.88743L7.68389 6.99993Z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-picker-input"
        >
          <input
            autocomplete="off"
            placeholder="End date"
            readonly=""
            size="12"
            value=""
          />
        </div>
        <div
          class="ant-picker-active-bar"
          style="left: 0px; width: 0px; position: absolute;"
        />
      </div>
    </div>
  </div>
  <div>
    <div
      class="css-1y8q0oh"
    >
      <div
        class="ant-picker ant-picker-range ant-picker-middle css-dev-only-do-not-override-1xo6ltj basic-range-picker-wrapper css-w7y1zu"
      >
        <div
          class="ant-picker-input ant-picker-input-active"
        >
          <input
            autocomplete="off"
            placeholder="Start date"
            readonly=""
            size="12"
            value=""
          />
        </div>
        <div
          class="ant-picker-range-separator"
        >
          <span
            class="custom-icon custom-icon-arrow-right css-u3jcp4"
            role="img"
          >
            <svg
              fill="currentColor"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.68389 6.99993L4.79639 4.11243L5.62122 3.2876L9.33355 6.99993L5.62122 10.7123L4.79639 9.88743L7.68389 6.99993Z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-picker-input"
        >
          <input
            autocomplete="off"
            placeholder="End date"
            readonly=""
            size="12"
            value=""
          />
        </div>
        <div
          class="ant-picker-active-bar"
          style="left: 0px; width: 0px; position: absolute;"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/BasicRangePicker render diff size range date 3`] = `
<body>
  <div>
    <div
      class="css-1y8q0oh"
    >
      <div
        class="ant-picker ant-picker-range ant-picker-small css-dev-only-do-not-override-1xo6ltj basic-range-picker-wrapper custom-date-range css-w7y1zu"
      >
        <div
          class="ant-picker-input ant-picker-input-active"
        >
          <input
            autocomplete="off"
            placeholder="Start date"
            readonly=""
            size="12"
            value=""
          />
        </div>
        <div
          class="ant-picker-range-separator"
        >
          <span
            class="custom-icon custom-icon-arrow-right css-u3jcp4"
            role="img"
          >
            <svg
              fill="currentColor"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.68389 6.99993L4.79639 4.11243L5.62122 3.2876L9.33355 6.99993L5.62122 10.7123L4.79639 9.88743L7.68389 6.99993Z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-picker-input"
        >
          <input
            autocomplete="off"
            placeholder="End date"
            readonly=""
            size="12"
            value=""
          />
        </div>
        <div
          class="ant-picker-active-bar"
          style="left: 0px; width: 0px; position: absolute;"
        />
      </div>
    </div>
  </div>
  <div>
    <div
      class="css-1y8q0oh"
    >
      <div
        class="ant-picker ant-picker-range ant-picker-middle css-dev-only-do-not-override-1xo6ltj basic-range-picker-wrapper css-w7y1zu"
      >
        <div
          class="ant-picker-input ant-picker-input-active"
        >
          <input
            autocomplete="off"
            placeholder="Start date"
            readonly=""
            size="12"
            value=""
          />
        </div>
        <div
          class="ant-picker-range-separator"
        >
          <span
            class="custom-icon custom-icon-arrow-right css-u3jcp4"
            role="img"
          >
            <svg
              fill="currentColor"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.68389 6.99993L4.79639 4.11243L5.62122 3.2876L9.33355 6.99993L5.62122 10.7123L4.79639 9.88743L7.68389 6.99993Z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-picker-input"
        >
          <input
            autocomplete="off"
            placeholder="End date"
            readonly=""
            size="12"
            value=""
          />
        </div>
        <div
          class="ant-picker-active-bar"
          style="left: 0px; width: 0px; position: absolute;"
        />
      </div>
    </div>
  </div>
  <div>
    <div
      class="css-1y8q0oh"
    >
      <div
        class="ant-picker ant-picker-range ant-picker-large css-dev-only-do-not-override-1xo6ltj basic-range-picker-wrapper css-w7y1zu"
      >
        <div
          class="ant-picker-input ant-picker-input-active"
        >
          <input
            autocomplete="off"
            placeholder="Start date"
            readonly=""
            size="12"
            value=""
          />
        </div>
        <div
          class="ant-picker-range-separator"
        >
          <span
            class="custom-icon custom-icon-arrow-right css-u3jcp4"
            role="img"
          >
            <svg
              fill="currentColor"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.68389 6.99993L4.79639 4.11243L5.62122 3.2876L9.33355 6.99993L5.62122 10.7123L4.79639 9.88743L7.68389 6.99993Z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-picker-input"
        >
          <input
            autocomplete="off"
            placeholder="End date"
            readonly=""
            size="12"
            value=""
          />
        </div>
        <div
          class="ant-picker-active-bar"
          style="left: 0px; width: 0px; position: absolute;"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/BasicRangePicker render no supper icon 1`] = `
<body>
  <div>
    <div
      class="css-1di7b8j"
    >
      <div
        class="ant-picker ant-picker-range css-dev-only-do-not-override-1xo6ltj basic-range-picker-wrapper custom-date-range css-w7y1zu"
      >
        <div
          class="ant-picker-input ant-picker-input-active"
        >
          <input
            autocomplete="off"
            placeholder="Start date"
            readonly=""
            size="12"
            value=""
          />
        </div>
        <div
          class="ant-picker-range-separator"
        >
          <span
            class="custom-icon custom-icon-arrow-right css-u3jcp4"
            role="img"
          >
            <svg
              fill="currentColor"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.68389 6.99993L4.79639 4.11243L5.62122 3.2876L9.33355 6.99993L5.62122 10.7123L4.79639 9.88743L7.68389 6.99993Z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-picker-input"
        >
          <input
            autocomplete="off"
            placeholder="End date"
            readonly=""
            size="12"
            value=""
          />
        </div>
        <div
          class="ant-picker-active-bar"
          style="left: 0px; width: 0px; position: absolute;"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/BasicRangePicker render none prefix icon 1`] = `
<body>
  <div>
    <div
      class="css-1y8q0oh"
    >
      <div
        class="ant-picker ant-picker-range css-dev-only-do-not-override-1xo6ltj basic-range-picker-wrapper custom-date-range css-w7y1zu"
      >
        <div
          class="ant-picker-input ant-picker-input-active"
        >
          <input
            autocomplete="off"
            placeholder="Start date"
            readonly=""
            size="12"
            value=""
          />
        </div>
        <div
          class="ant-picker-range-separator"
        >
          <span
            class="custom-icon custom-icon-arrow-right css-u3jcp4"
            role="img"
          >
            <svg
              fill="currentColor"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.68389 6.99993L4.79639 4.11243L5.62122 3.2876L9.33355 6.99993L5.62122 10.7123L4.79639 9.88743L7.68389 6.99993Z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-picker-input"
        >
          <input
            autocomplete="off"
            placeholder="End date"
            readonly=""
            size="12"
            value=""
          />
        </div>
        <div
          class="ant-picker-active-bar"
          style="left: 0px; width: 0px; position: absolute;"
        />
      </div>
    </div>
  </div>
</body>
`;
